--- a/aarsoppgave/templates/FAQ.html
+++ b/aarsoppgave/templates/FAQ.html
@@ -13,7 +13,7 @@
 
     <header class="header">
         <nav class="navbar">
-            <a href="/app">Hjem</a>
+            <a href="/app">Home</a>
             <a href="/admin">Admin</a>
             <a href="/FAQ">FAQ</a>
         </nav>
