--- a/aarsoppgave/templates/FAQ.html
+++ b/aarsoppgave/templates/FAQ.html
@@ -19,7 +19,7 @@
         </nav>
         <div class="logout-button-div">
             <form action="{{url_for('logout')}}" method="post">
-                <button class="logout-button" name="logout" type="submit">Logg ut</button>
+                <button class="logout-button" name="logout" type="submit">Log Out</button>
             </form>
         </div>
     </header>
